fixed the overflow issue with the form so that smaller screens can click the submit button

--- a/static/mainstyles/resources.css
+++ b/static/mainstyles/resources.css
@@ -66,7 +66,7 @@ table{
 #uploadformfog{
     padding-top:4%;
     height: 100%;
-    overflow: hidden;
+    overflow-y: scroll;
     position: fixed; /* Sit on top of the page content */
     display: none; /* Hidden by default */
     width: 100%; /* Full width (cover the whole page) */
@@ -272,4 +272,8 @@ input, select, textarea{
     background-color: rgba(0,0,0,0.5); /* Black background with opacity */
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
+}
+
+#uploadresourceform{
+    height:90%;
 }
